Sub-resource locators, request fields and setters, @BeanParam and @Encoded; JAX-RS parameter conversion rules
Sub-resource locators are flattened at compile time into routes that call the locators in order.
A resource whose constructor, fields or setters read the request is created per request.
@BeanParam types are introspected and filled at runtime. The TCK harness deploys only the
archive the test class declares itself.